Review Request 10091 see PLS-3939 - fixed broken css for title icons

--- a/le-ui/projects/leadprioritization/app/playbook/content/launch/launch.component.scss
+++ b/le-ui/projects/leadprioritization/app/playbook/content/launch/launch.component.scss
@@ -1,5 +1,5 @@
 .playbook-launch {
-	& > .header {
+	.header {
 		h2 {
 			background-image: url('/assets/images/ico-launch.png');
 		}
