--- a/le-ui/projects/leadprioritization/app/playbook/content/rating/rating.component.scss
+++ b/le-ui/projects/leadprioritization/app/playbook/content/rating/rating.component.scss
@@ -1,5 +1,5 @@
 .playbook-ratings {
-	& > .header {
+	.header {
 		h2 {
 			background-image: url('/assets/images/ico-ratings.png');
 			padding-left: 27px;
