--- a/le-ui/projects/leadprioritization/app/playbook/content/segment/segment.component.scss
+++ b/le-ui/projects/leadprioritization/app/playbook/content/segment/segment.component.scss
@@ -1,5 +1,5 @@
 .playbook-segment {
-    & > .header {
+    .header {
         h2 {
             background-image: url('/assets/images/ico-segments.png');
         }
