--- a/le-ui/projects/leadprioritization/app/playbook/content/settings/settings.component.scss
+++ b/le-ui/projects/leadprioritization/app/playbook/content/settings/settings.component.scss
@@ -1,5 +1,5 @@
 .playbook-settings {
-    & > .header {
+    .header {
         h2 {
             background-image: url('/assets/images/ico-settings.png');
         }
